--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -74,6 +74,7 @@
       "Transit": "Transit",
       "Composite": "Composite",
       "Return": "Return",
+      "return_aspects": "Natal-Return Aspects",
       "celestial_points": {
         "Sun": "Sun",
         "Moon": "Moon",
@@ -171,6 +172,7 @@
       "Transit": "Transit",
       "Composite": "Composite",
       "Return": "Retour",
+      "return_aspects": "Aspects natal-retour",
       "celestial_points": {
         "Sun": "Soleil",
         "Moon": "Lune",
@@ -268,6 +270,7 @@
       "Transit": "Trânsito",
       "Composite": "Composto",
       "Return": "Retorno",
+      "return_aspects": "Aspectos do natal para o retorno",
       "celestial_points": {
         "Sun": "Sol",
         "Moon": "Lua",
@@ -365,6 +368,7 @@
       "Transit": "Transito",
       "Composite": "Composito",
       "Return": "Rivoluzione",
+      "return_aspects": "Aspetti tra tema natale e tema di rivoluzione",
       "celestial_points": {
         "Sun": "Sole",
         "Moon": "Luna",
@@ -462,6 +466,7 @@
       "Transit": "運行",
       "Composite": "合成盤",
       "Return": "回歸",
+      "return_aspects": "本命与回归相位",
       "celestial_points": {
         "Sun": "太陽",
         "Moon": "月亮",
@@ -559,6 +564,7 @@
       "Transit": "Tránsito",
       "Composite": "Compuesto",
       "Return": "Retorno",
+      "return_aspects": "Aspectos entre natal y retorno",
       "celestial_points": {
         "Sun": "Sol",
         "Moon": "Luna",
@@ -656,6 +662,7 @@
       "Transit": "Транзит",
       "Composite": "Композит",
       "Return": "Возврат",
+      "return_aspects": "Аспекты от натала к возвращению",
       "celestial_points": {
         "Sun": "Солнце",
         "Moon": "Луна",
@@ -753,6 +760,7 @@
       "Transit": "Geçiş",
       "Composite": "Kompozit",
       "Return": "Dönüş",
+      "return_aspects": "Doğumdan dönüşe açılar",
       "celestial_points": {
         "Sun": "Güneş",
         "Moon": "Ay",
@@ -850,6 +858,7 @@
       "Transit": "Transit",
       "Composite": "Composit",
       "Return": "Rückkehr",
+      "return_aspects": "Aspekte vom Radix zum Return",
       "celestial_points": {
         "Sun": "Sonne",
         "Moon": "Mond",
@@ -947,6 +956,7 @@
       "Transit": "गोचर",
       "Composite": "संयुक्त",
       "Return": "वापसी",
+      "return_aspects": "जन्म से रिटर्न तक के पहलू",
       "celestial_points": {
         "Sun": "सूर्य",
         "Moon": "चंद्रमा",
@@ -1039,15 +1049,14 @@
       "color": "var(--kerykeion-chart-color-opposition)"
     }
   ],
+  "return_aspects": "TODO",
   "celestial_points": [
     {
       "id": 0,
       "name": "Sun",
       "color": "var(--kerykeion-chart-color-sun)",
       "element_points": 40,
-      "related_zodiac_signs": [
-        "4"
-      ],
+      "related_zodiac_signs": ["4"],
       "label": "Sun"
     },
     {
@@ -1055,9 +1064,7 @@
       "name": "Moon",
       "color": "var(--kerykeion-chart-color-moon)",
       "element_points": 40,
-      "related_zodiac_signs": [
-        "3"
-      ],
+      "related_zodiac_signs": ["3"],
       "label": "Moon"
     },
     {
@@ -1065,10 +1072,7 @@
       "name": "Mercury",
       "color": "var(--kerykeion-chart-color-mercury)",
       "element_points": 15,
-      "related_zodiac_signs": [
-        "2",
-        "5"
-      ],
+      "related_zodiac_signs": ["2", "5"],
       "label": "Mercury"
     },
     {
@@ -1076,10 +1080,7 @@
       "name": "Venus",
       "color": "var(--kerykeion-chart-color-venus)",
       "element_points": 15,
-      "related_zodiac_signs": [
-        "1",
-        "6"
-      ],
+      "related_zodiac_signs": ["1", "6"],
       "label": "Venus"
     },
     {
@@ -1087,9 +1088,7 @@
       "name": "Mars",
       "color": "var(--kerykeion-chart-color-mars)",
       "element_points": 15,
-      "related_zodiac_signs": [
-        "0"
-      ],
+      "related_zodiac_signs": ["0"],
       "label": "Mars"
     },
     {
@@ -1097,9 +1096,7 @@
       "name": "Jupiter",
       "color": "var(--kerykeion-chart-color-jupiter)",
       "element_points": 10,
-      "related_zodiac_signs": [
-        "8"
-      ],
+      "related_zodiac_signs": ["8"],
       "label": "Jupiter"
     },
     {
@@ -1107,9 +1104,7 @@
       "name": "Saturn",
       "color": "var(--kerykeion-chart-color-saturn)",
       "element_points": 10,
-      "related_zodiac_signs": [
-        "9"
-      ],
+      "related_zodiac_signs": ["9"],
       "label": "Saturn"
     },
     {
@@ -1117,9 +1112,7 @@
       "name": "Uranus",
       "color": "var(--kerykeion-chart-color-uranus)",
       "element_points": 10,
-      "related_zodiac_signs": [
-        "10"
-      ],
+      "related_zodiac_signs": ["10"],
       "label": "Uranus"
     },
     {
@@ -1127,9 +1120,7 @@
       "name": "Neptune",
       "color": "var(--kerykeion-chart-color-neptune)",
       "element_points": 10,
-      "related_zodiac_signs": [
-        "11"
-      ],
+      "related_zodiac_signs": ["11"],
       "label": "Neptune"
     },
     {
@@ -1137,9 +1128,7 @@
       "name": "Pluto",
       "color": "var(--kerykeion-chart-color-pluto)",
       "element_points": 10,
-      "related_zodiac_signs": [
-        "7"
-      ],
+      "related_zodiac_signs": ["7"],
       "label": "Pluto"
     },
     {
