--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -21,6 +21,7 @@
       "planets_and_house": "Points for",
       "transit_name": "At the time of the transit",
       "lunar_phase": "Lunar phase",
+      "lunation_day": "Lunation Day",
       "day": "Day",
       "composite_chart": "Composite Chart",
       "midpoints": "Midpoints",
@@ -127,6 +128,7 @@
       "planets_and_house": "Points pour",
       "transit_name": "Au moment de la transition",
       "lunar_phase": "Phase Lunaire",
+      "lunation_day": "Jour de Lunaison",
       "day": "Jour",
       "composite_chart": "Carte Composite",
       "midpoints": "Milieux",
@@ -233,6 +235,7 @@
       "planets_and_house": "Pontos para",
       "transit_name": "No momento do trânsito",
       "lunar_phase": "Fase lunar",
+      "lunation_day": "Dia de Lunação",
       "day": "Dia",
       "composite_chart": "Carta Composta",
       "midpoints": "Meios",
@@ -339,6 +342,7 @@
       "planets_and_house": "Punti per",
       "transit_name": "Al momento del transito",
       "lunar_phase": "Fase lunare",
+      "lunation_day": "Giorno di Lunazione",
       "day": "Giorno",
       "composite_chart": "Tema Composito",
       "midpoints": "Punti Medi",
@@ -444,6 +448,7 @@
       "planets_and_house": "行星 與 宫位",
       "transit_name": "流年名稱",
       "lunar_phase": "月相",
+      "lunation_day": "朔望月日",
       "day": "日",
       "composite_chart": "合盤",
       "midpoints": "中點",
@@ -550,6 +555,7 @@
       "planets_and_house": "Puntos para",
       "transit_name": "En el momento del tránsito",
       "lunar_phase": "Fase lunar",
+      "lunation_day": "Día de Lunación",
       "day": "Día",
       "composite_chart": "Carta Compuesta",
       "midpoints": "Puntos Medios",
@@ -655,6 +661,7 @@
       "planets_and_house": "Пункты для",
       "transit_name": "В момент транзита",
       "lunar_phase": "Лунная фаза",
+      "lunation_day": "Лунационный день",
       "day": "День",
       "composite_chart": "Композитная карта",
       "midpoints": "Средние точки",
@@ -761,6 +768,7 @@
       "planets_and_house": "Puanlar için",
       "transit_name": "Geçiş anında",
       "lunar_phase": "Ay Aşaması",
+      "lunation_day": "Ay Döngüsü Günü",
       "day": "Gün",
       "composite_chart": "Kompozit Harita",
       "midpoints": "Orta Noktalar",
@@ -867,6 +875,7 @@
       "planets_and_house": "Punkte für",
       "transit_name": "Zum Zeitpunkt des Transits",
       "lunar_phase": "Mondphase",
+      "lunation_day": "Lunationstag",
       "day": "Tag",
       "composite_chart": "Komposit-Chart",
       "midpoints": "Mittelpunkte",
@@ -973,6 +982,7 @@
       "planets_and_house": "अंक के लिए",
       "transit_name": "गोचर के समय",
       "lunar_phase": "चंद्र चरण",
+      "lunation_day": "चंद्र चक्र दिन",
       "day": "दिन",
       "composite_chart": "संयुक्त चार्ट",
       "midpoints": "मध्य बिंदु",
