--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -46,6 +46,7 @@
       "last_quarter": "Last Quarter",
       "waning_crescent": "Waning Crescent",
       "houses": "Houses",
+      "domification": "domification",
       "houses_system_A": "Equal",
       "houses_system_B": "Alcabitius",
       "houses_system_C": "Campanus",
@@ -154,6 +155,7 @@
       "last_quarter": "Dernier Quartier",
       "waning_crescent": "Dernier Croissant",
       "houses": "Maisons",
+      "domification": "domification",
       "houses_system_A": "Égales",
       "houses_system_B": "Alcabitius",
       "houses_system_C": "Campanus",
@@ -262,6 +264,7 @@
       "last_quarter": "Quarto Minguante",
       "waning_crescent": "Lua Minguante",
       "houses": "Casas",
+      "domification": "Domificação",
       "houses_system_A": "Igual",
       "houses_system_B": "Alcabítio",
       "houses_system_C": "Campanus",
@@ -370,6 +373,7 @@
       "last_quarter": "Ultimo Quarto",
       "waning_crescent": "Luna Calante",
       "houses": "Domificazione",
+      "domification": "Domificazione",
       "houses_system_A": "Uguale",
       "houses_system_B": "Alcabizio",
       "houses_system_C": "Campano",
@@ -477,6 +481,7 @@
       "last_quarter": "下弦月",
       "waning_crescent": "殘月",
       "houses": "宮位系統",
+      "domification": "宫位划分",
       "houses_system_A": "等宮",
       "houses_system_B": "阿卡比提烏斯",
       "houses_system_C": "坎帕努斯",
@@ -585,6 +590,7 @@
       "last_quarter": "Cuarto Menguante",
       "waning_crescent": "Luna Menguante",
       "houses": "Casas",
+      "domification": "Domificación",
       "houses_system_A": "Iguales",
       "houses_system_B": "Alcabicio",
       "houses_system_C": "Campanus",
@@ -692,6 +698,7 @@
       "last_quarter": "Последняя Четверть",
       "waning_crescent": "Убывающий Серп",
       "houses": "Дома",
+      "domification": "Домификация",
       "houses_system_A": "Равные",
       "houses_system_B": "Алькабитиус",
       "houses_system_C": "Кампанус",
@@ -800,6 +807,7 @@
       "last_quarter": "Son Dördün",
       "waning_crescent": "Küçülen Hilal",
       "houses": "Evler",
+      "domification": "Domifikasyon",
       "houses_system_A": "Eşit",
       "houses_system_B": "Alkabisyus",
       "houses_system_C": "Kampanus",
@@ -908,6 +916,7 @@
       "last_quarter": "Letztes Viertel",
       "waning_crescent": "Abnehmende Sichel",
       "houses": "Häuser",
+      "domification": "Domifikation",
       "houses_system_A": "Gleich",
       "houses_system_B": "Alcabitius",
       "houses_system_C": "Campanus",
@@ -944,7 +953,6 @@
       "outer_wheel": "Äußerer Kreis",
       "house_position_comparison": "Vergleich der Häuserpositionen",
       "return_point": "Rückkehrpunkt",
-      "Return": "Rückkehr",
       "natal": "Radix",
       "perspective_type": "Perspektive",
       "celestial_points": {
@@ -1016,6 +1024,7 @@
       "last_quarter": "कृष्ण पक्ष सप्तमी",
       "waning_crescent": "कृष्ण पक्ष प्रथमा",
       "houses": "भावों",
+      "domification": "गृह",
       "houses_system_A": "समान",
       "houses_system_B": "अल्काबितियस",
       "houses_system_C": "कैम्पानस",
@@ -1052,7 +1061,6 @@
       "outer_wheel": "बाहरी चक्र",
       "house_position_comparison": "भाव स्थिति तुलना",
       "return_point": "पुनरागमन बिंदु",
-      "Return": "पुनरागमन",
       "natal": "जन्म कुंडली",
       "perspective_type": "दृष्टिकोण",
       "celestial_points": {
