--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -252,10 +252,10 @@
                 "Quaoar": "Quaoar",
                 "Regulus": "Regulus",
                 "Spica": "Spica",
-                "Pars_Fortunae": "Part de Fortune",
-                "Pars_Spiritus": "Part d'Esprit",
-                "Pars_Amoris": "Part d'Amour",
-                "Pars_Fidei": "Part de Foi",
+                "Pars_Fortunae": "Pars Fortunae",
+                "Pars_Spiritus": "Pars Spiritus",
+                "Pars_Amoris": "Pars Amoris",
+                "Pars_Fidei": "Pars Fidei",
                 "Vertex": "Vertex",
                 "Anti_Vertex": "Anti-Vertex"
             }
@@ -382,10 +382,10 @@
                 "Quaoar": "Quaoar",
                 "Regulus": "Régulo",
                 "Spica": "Spica",
-                "Pars_Fortunae": "Parte da Fortuna",
-                "Pars_Spiritus": "Parte do Espírito",
-                "Pars_Amoris": "Parte do Amor",
-                "Pars_Fidei": "Parte da Fé",
+                "Pars_Fortunae": "Pars Fortunae",
+                "Pars_Spiritus": "Pars Spiritus",
+                "Pars_Amoris": "Pars Amoris",
+                "Pars_Fidei": "Pars Fidei",
                 "Vertex": "Vertex",
                 "Anti_Vertex": "Anti-Vertex"
             }
@@ -512,10 +512,10 @@
                 "Quaoar": "Quaoar",
                 "Regulus": "Regolo",
                 "Spica": "Spica",
-                "Pars_Fortunae": "Parte di Fortuna",
-                "Pars_Spiritus": "Parte dello Spirito",
-                "Pars_Amoris": "Parte dell'Amore",
-                "Pars_Fidei": "Parte della Fede",
+                "Pars_Fortunae": "Pars Fortunae",
+                "Pars_Spiritus": "Pars Spiritus",
+                "Pars_Amoris": "Pars Amoris",
+                "Pars_Fidei": "Pars Fidei",
                 "Vertex": "Vertex",
                 "Anti_Vertex": "Anti-Vertex"
             }
@@ -772,10 +772,10 @@
                 "Quaoar": "Quaoar",
                 "Regulus": "Régulo",
                 "Spica": "Spica",
-                "Pars_Fortunae": "Parte de Fortuna",
-                "Pars_Spiritus": "Parte del Espíritu",
-                "Pars_Amoris": "Parte del Amor",
-                "Pars_Fidei": "Parte de la Fe",
+                "Pars_Fortunae": "Pars Fortunae",
+                "Pars_Spiritus": "Pars Spiritus",
+                "Pars_Amoris": "Pars Amoris",
+                "Pars_Fidei": "Pars Fidei",
                 "Vertex": "Vertex",
                 "Anti_Vertex": "Anti-Vertex"
             }
