--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -85,6 +85,14 @@
             "Return": "Return",
             "natal": "Natal",
             "perspective_type": "Perspective",
+            "location": "Location",
+            "day_of_week": "Day of Week",
+            "elements": "Elements",
+            "qualities": "Qualities",
+            "cardinal": "Cardinal",
+            "fixed": "Fixed",
+            "mutable": "Mutable",
+            "birth_chart": "Birth Chart",
             "celestial_points": {
                 "Sun": "Sun",
                 "Moon": "Moon",
@@ -215,6 +223,14 @@
             "Return": "Révolution",
             "natal": "Radix",
             "perspective_type": "Perspective",
+            "location": "Lieu",
+            "day_of_week": "Jour de la semaine",
+            "elements": "Éléments",
+            "qualities": "Qualités",
+            "cardinal": "Cardinal",
+            "fixed": "Fixe",
+            "mutable": "Mutable",
+            "birth_chart": "Thème Natal",
             "celestial_points": {
                 "Sun": "Soleil",
                 "Moon": "Lune",
@@ -345,6 +361,14 @@
             "return_point": "Ponto (ret.)",
             "natal": "Natal",
             "perspective_type": "Perspectiva",
+            "location": "Localização",
+            "day_of_week": "Dia da semana",
+            "elements": "Elementos",
+            "qualities": "Qualidades",
+            "cardinal": "Cardinal",
+            "fixed": "Fixo",
+            "mutable": "Mutável",
+            "birth_chart": "Mapa Natal",
             "celestial_points": {
                 "Sun": "Sol",
                 "Moon": "Lua",
@@ -475,6 +499,14 @@
             "Return": "Ritorno",
             "natal": "Radix",
             "perspective_type": "Prospettiva",
+            "location": "Località",
+            "day_of_week": "Giorno della settimana",
+            "elements": "Elementi",
+            "qualities": "Qualità",
+            "cardinal": "Cardinale",
+            "fixed": "Fisso",
+            "mutable": "Mutevole",
+            "birth_chart": "Tema Natale",
             "celestial_points": {
                 "Sun": "Sole",
                 "Moon": "Luna",
@@ -605,6 +637,14 @@
             "Return": "回归",
             "natal": "本命",
             "perspective_type": "视角",
+            "location": "位置",
+            "day_of_week": "星期",
+            "elements": "元素",
+            "qualities": "性质",
+            "cardinal": "本位",
+            "fixed": "固定",
+            "mutable": "变动",
+            "birth_chart": "出生图",
             "celestial_points": {
                 "Sun": "太陽",
                 "Moon": "月亮",
@@ -735,6 +775,14 @@
             "return_point": "Punto (rev.)",
             "natal": "Radix",
             "perspective_type": "Perspectiva",
+            "location": "Ubicación",
+            "day_of_week": "Día de la semana",
+            "elements": "Elementos",
+            "qualities": "Cualidades",
+            "cardinal": "Cardinal",
+            "fixed": "Fijo",
+            "mutable": "Mutable",
+            "birth_chart": "Carta Natal",
             "celestial_points": {
                 "Sun": "Sol",
                 "Moon": "Luna",
@@ -865,6 +913,14 @@
             "Return": "Возвращение",
             "natal": "Радикс",
             "perspective_type": "Перспектива",
+            "location": "Местоположение",
+            "day_of_week": "День недели",
+            "elements": "Стихии",
+            "qualities": "Качества",
+            "cardinal": "Кардинальный",
+            "fixed": "Фиксированный",
+            "mutable": "Мутабельный",
+            "birth_chart": "Натальная Карта",
             "celestial_points": {
                 "Sun": "Солнце",
                 "Moon": "Луна",
@@ -995,6 +1051,14 @@
             "Return": "Dönüş",
             "natal": "Doğum haritası",
             "perspective_type": "Perspektif",
+            "location": "Konum",
+            "day_of_week": "Haftanın günü",
+            "elements": "Elementler",
+            "qualities": "Nitelikler",
+            "cardinal": "Kardinal",
+            "fixed": "Sabit",
+            "mutable": "Değişken",
+            "birth_chart": "Doğum Haritası",
             "celestial_points": {
                 "Sun": "Güneş",
                 "Moon": "Ay",
@@ -1125,6 +1189,14 @@
             "return_point": "Rückkehrpunkt",
             "natal": "Radix",
             "perspective_type": "Perspektive",
+            "location": "Ort",
+            "day_of_week": "Wochentag",
+            "elements": "Elemente",
+            "qualities": "Qualitäten",
+            "cardinal": "Kardinal",
+            "fixed": "Fix",
+            "mutable": "Veränderlich",
+            "birth_chart": "Geburtshoroskop",
             "celestial_points": {
                 "Sun": "Sonne",
                 "Moon": "Mond",
@@ -1255,6 +1327,14 @@
             "return_point": "पुनरागमन बिंदु",
             "natal": "जन्म कुंडली",
             "perspective_type": "दृष्टिकोण",
+            "location": "स्थान",
+            "day_of_week": "सप्ताह का दिन",
+            "elements": "तत्व",
+            "qualities": "गुण",
+            "cardinal": "चल",
+            "fixed": "स्थिर",
+            "mutable": "द्विस्वभाव",
+            "birth_chart": "जन्म चार्ट",
             "celestial_points": {
                 "Sun": "सूर्य",
                 "Moon": "चंद्रमा",
