--- a/.gitignore
+++ b/.gitignore
@@ -53,4 +53,14 @@ request_cache
 Pipfile
 .mypy_cache
 
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
 *.patch
