--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -87,6 +87,15 @@
             "perspective_type": "Perspective",
             "location": "Location",
             "day_of_week": "Day of Week",
+            "weekdays": {
+                "Monday": "Monday",
+                "Tuesday": "Tuesday",
+                "Wednesday": "Wednesday",
+                "Thursday": "Thursday",
+                "Friday": "Friday",
+                "Saturday": "Saturday",
+                "Sunday": "Sunday"
+            },
             "elements": "Elements",
             "qualities": "Qualities",
             "cardinal": "Cardinal",
@@ -225,6 +234,15 @@
             "perspective_type": "Perspective",
             "location": "Lieu",
             "day_of_week": "Jour de la semaine",
+            "weekdays": {
+                "Monday": "Lundi",
+                "Tuesday": "Mardi",
+                "Wednesday": "Mercredi",
+                "Thursday": "Jeudi",
+                "Friday": "Vendredi",
+                "Saturday": "Samedi",
+                "Sunday": "Dimanche"
+            },
             "elements": "Éléments",
             "qualities": "Qualités",
             "cardinal": "Cardinal",
@@ -363,6 +381,15 @@
             "perspective_type": "Perspectiva",
             "location": "Localização",
             "day_of_week": "Dia da semana",
+            "weekdays": {
+                "Monday": "Segunda",
+                "Tuesday": "Terça",
+                "Wednesday": "Quarta",
+                "Thursday": "Quinta",
+                "Friday": "Sexta",
+                "Saturday": "Sábado",
+                "Sunday": "Domingo"
+            },
             "elements": "Elementos",
             "qualities": "Qualidades",
             "cardinal": "Cardinal",
@@ -501,6 +528,15 @@
             "perspective_type": "Prospettiva",
             "location": "Località",
             "day_of_week": "Giorno della settimana",
+            "weekdays": {
+                "Monday": "Lunedì",
+                "Tuesday": "Martedì",
+                "Wednesday": "Mercoledì",
+                "Thursday": "Giovedì",
+                "Friday": "Venerdì",
+                "Saturday": "Sabato",
+                "Sunday": "Domenica"
+            },
             "elements": "Elementi",
             "qualities": "Qualità",
             "cardinal": "Cardinale",
@@ -639,6 +675,15 @@
             "perspective_type": "视角",
             "location": "位置",
             "day_of_week": "星期",
+            "weekdays": {
+                "Monday": "星期一",
+                "Tuesday": "星期二",
+                "Wednesday": "星期三",
+                "Thursday": "星期四",
+                "Friday": "星期五",
+                "Saturday": "星期六",
+                "Sunday": "星期日"
+            },
             "elements": "元素",
             "qualities": "性质",
             "cardinal": "本位",
@@ -777,6 +822,15 @@
             "perspective_type": "Perspectiva",
             "location": "Ubicación",
             "day_of_week": "Día de la semana",
+            "weekdays": {
+                "Monday": "Lunes",
+                "Tuesday": "Martes",
+                "Wednesday": "Miércoles",
+                "Thursday": "Jueves",
+                "Friday": "Viernes",
+                "Saturday": "Sábado",
+                "Sunday": "Domingo"
+            },
             "elements": "Elementos",
             "qualities": "Cualidades",
             "cardinal": "Cardinal",
@@ -915,6 +969,15 @@
             "perspective_type": "Перспектива",
             "location": "Местоположение",
             "day_of_week": "День недели",
+            "weekdays": {
+                "Monday": "Понедельник",
+                "Tuesday": "Вторник",
+                "Wednesday": "Среда",
+                "Thursday": "Четверг",
+                "Friday": "Пятница",
+                "Saturday": "Суббота",
+                "Sunday": "Воскресенье"
+            },
             "elements": "Стихии",
             "qualities": "Качества",
             "cardinal": "Кардинальный",
@@ -1053,6 +1116,15 @@
             "perspective_type": "Perspektif",
             "location": "Konum",
             "day_of_week": "Haftanın günü",
+            "weekdays": {
+                "Monday": "Pazartesi",
+                "Tuesday": "Salı",
+                "Wednesday": "Çarşamba",
+                "Thursday": "Perşembe",
+                "Friday": "Cuma",
+                "Saturday": "Cumartesi",
+                "Sunday": "Pazar"
+            },
             "elements": "Elementler",
             "qualities": "Nitelikler",
             "cardinal": "Kardinal",
@@ -1191,6 +1263,15 @@
             "perspective_type": "Perspektive",
             "location": "Ort",
             "day_of_week": "Wochentag",
+            "weekdays": {
+                "Monday": "Montag",
+                "Tuesday": "Dienstag",
+                "Wednesday": "Mittwoch",
+                "Thursday": "Donnerstag",
+                "Friday": "Freitag",
+                "Saturday": "Samstag",
+                "Sunday": "Sonntag"
+            },
             "elements": "Elemente",
             "qualities": "Qualitäten",
             "cardinal": "Kardinal",
@@ -1329,6 +1410,15 @@
             "perspective_type": "दृष्टिकोण",
             "location": "स्थान",
             "day_of_week": "सप्ताह का दिन",
+            "weekdays": {
+                "Monday": "सोमवार",
+                "Tuesday": "मंगलवार",
+                "Wednesday": "बुधवार",
+                "Thursday": "गुरुवार",
+                "Friday": "शुक्रवार",
+                "Saturday": "शनिवार",
+                "Sunday": "रविवार"
+            },
             "elements": "तत्व",
             "qualities": "गुण",
             "cardinal": "चल",
