--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -46,7 +46,7 @@
             "last_quarter": "Last Quarter",
             "waning_crescent": "Waning Crescent",
             "houses": "Houses",
-            "domification": "domification",
+            "domification": "Domification",
             "houses_system_A": "Equal",
             "houses_system_B": "Alcabitius",
             "houses_system_C": "Campanus",
@@ -193,7 +193,7 @@
             "last_quarter": "Dernier Quartier",
             "waning_crescent": "Dernier Croissant",
             "houses": "Maisons",
-            "domification": "domification",
+            "domification": "Domification",
             "houses_system_A": "Égales",
             "houses_system_B": "Alcabitius",
             "houses_system_C": "Campanus",
