fix: add pyright configuration and resolve type checking errors
- Add pyrightconfig.json for consistent type checking between CLI and VS Code
- Replace hasattr() checks with isinstance() for proper type narrowing in chart_drawer.py
- Add TypeAlias annotations to all Literal type aliases in kr_literals.py
- Configure pyright in pyproject.toml with appropriate rule settings

This ensures pyright reports 0 errors while maintaining type safety for
critical checks (reportInvalidTypeForm, reportAttributeAccessIssue).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,6 +148,32 @@ script = "scripts.quality_check:main"
 [tool.ruff]
 line-length = 120
 
+# Pyright Static Type Checking
+[tool.pyright]
+include = ["kerykeion"]
+exclude = [
+    "tests",
+    "examples",
+    "workspace",
+    "scripts",
+    "**/__pycache__",
+    ".venv",
+    "dist",
+    "build",
+    "*.egg-info"
+]
+typeCheckingMode = "basic"
+pythonVersion = "3.9"
+pythonPlatform = "All"
+venvPath = "."
+venv = ".venv"
+reportOptionalMemberAccess = "none"
+reportIncompatibleVariableOverride = "none"
+reportArgumentType = "none"
+reportInvalidTypeForm = "error"
+reportAttributeAccessIssue = "error"
+reportGeneralTypeIssues = "none"
+
 [dependency-groups]
 dev = [
     "coverage>=7.6.0",
