--- a/pyproject.toml
+++ b/pyproject.toml
@@ -231,6 +231,7 @@ dev = [
     "mypy>=1.17.1",
     "pdoc>=15.0.4",
     "poethepoet>=0.36.0",
+    "pyright>=1.1.408",
     "pytest>=8.4.1",
     "pytest-cov>=6.0.0",
     "ruff>=0.12.9",
