--- a/pyproject.toml
+++ b/pyproject.toml
@@ -199,6 +199,31 @@ help = "Clean build artifacts and caches"
 [tool.ruff]
 line-length = 120
 
+[tool.ruff.lint]
+# Enable pyflakes (F) and pycodestyle (E, W) rules
+select = [
+    "F",      # Pyflakes - logic errors, undefined names, unused imports
+    "E",      # pycodestyle errors
+    "W",      # pycodestyle warnings
+]
+
+# Ignore rules that conflict with project structure
+ignore = [
+    "E402",   # Module level import not at top of file (needed for some modules)
+    "E501",   # Line too long (handled by line-length setting)
+    "E731",   # Do not assign a lambda expression, use a def (stylistic choice)
+]
+
+[tool.ruff.lint.per-file-ignores]
+# Backward compatibility module uses import * intentionally
+"kerykeion/backword.py" = ["F405", "F403", "F401"]
+# Settings re-exports symbols intentionally
+"kerykeion/settings/__init__.py" = ["F401", "F403"]
+# Schemas re-exports for public API
+"kerykeion/schemas/__init__.py" = ["F401", "F403"]
+# Types re-exports for public API
+"kerykeion/kr_types/__init__.py" = ["F405", "F403", "F401"]
+
 # Pyright Static Type Checking
 [tool.pyright]
 include = ["kerykeion"]
