refactor: reorganize test suite with parametrized tests and centralized fixtures
Major test suite refactoring to prepare for backend replacement:

Structure changes:
- Organize tests into subdirectories: core/, factories/, charts/, aspects/,
  reports/, utils/, external/, edge_cases/, compatibility/
- Create centralized conftest.py with reusable fixtures
- Add test_subjects_matrix.py with 25 temporal + 16 geographic subjects
- Auto-generate expected_positions.py and expected_aspects.py baselines

New parametrized tests:
- tests/core/test_planetary_positions.py - planets across time/geography
- tests/core/test_houses_positions.py - house cusps across all subjects
- tests/aspects/test_aspects_parametrized.py - natal/synastry aspects
- tests/aspects/test_aspect_movement_parametrized.py - 40 movement scenarios

Cleanup:
- Remove duplicate aspect movement tests (test_aspect_movement.py,
  test_aspect_movement_comprehensive.py)
- Remove old aspect tests replaced by parametrized versions
- Add Yoko Ono to test matrix for John+Yoko synastry coverage

Tooling:
- Add poe tasks: test:core, test:aspects, test:factories, test:charts, test:fast
- Add regenerate:positions, regenerate:matrix-aspects, regenerate:unified tasks
- Create scripts/regenerate_all.py for unified baseline regeneration

Results: 4740 tests passing (up from ~4635)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -133,6 +133,11 @@ test = "pytest"
 "test:cov" = "pytest --cov=kerykeion --cov-config=pyproject.toml --cov-report=html --cov-report=term --cov-report=xml"
 "test:cov-xml" = "pytest --cov=kerykeion --cov-report=xml"
 "test:nocharts" = "pytest --ignore-glob='*chart*.py'"
+"test:core" = "pytest tests/core/ -v"
+"test:aspects" = "pytest tests/aspects/ -v"
+"test:factories" = "pytest tests/factories/ -v"
+"test:charts" = "pytest tests/charts/ -v"
+"test:fast" = "pytest tests/core/ tests/aspects/ -v --ignore=tests/charts/"
 
 # Code Quality
 lint = "ruff check"
@@ -187,9 +192,21 @@ help = "Regenerate synastry from test"
 cmd = "python scripts/regenerate_test_output.py"
 help = "Regenerate test output"
 
+[tool.poe.tasks."regenerate:positions"]
+cmd = "python scripts/regenerate_all.py --positions"
+help = "Regenerate expected positions from test matrix"
+
+[tool.poe.tasks."regenerate:matrix-aspects"]
+cmd = "python scripts/regenerate_all.py --aspects"
+help = "Regenerate expected aspects from test matrix"
+
 [tool.poe.tasks."regenerate:all"]
 sequence = ["regenerate:charts", "regenerate:aspects", "regenerate:subjects", "regenerate:synastry-aspects", "regenerate:synastry", "regenerate:output"]
 help = "Regenerate all test fixtures"
+
+[tool.poe.tasks."regenerate:unified"]
+cmd = "python scripts/regenerate_all.py --all"
+help = "Regenerate all test baselines using unified script"
 
 # Utilities
 [tool.poe.tasks.clean]
