--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ John Lennon - Synastry Chart.svg
 libephemeris
 test-refactoring-proposal.md
 sync-docs.sh
+
+# Dart vendor files #
+#####################
+dart/vendor/
