--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ workspace/*
 !workspace/main.py
 .swp
 John Lennon - Synastry Chart.svg
-libephemeris
+Swiss Ephemeris
 test-refactoring-proposal.md
 sync-docs.sh
 *.bsp
